--- a/packages/client/src/assets/index.scss
+++ b/packages/client/src/assets/index.scss
@@ -1,3 +1,10 @@
+@font-face {
+  font-family: 'Overlay';
+  font-style: normal;
+  font-weight: 600;
+  src: local('Ubuntu'), url('@/assets/fonts/Ubuntu.woff2') format('woff2');
+}
+
 external-interface {
   position: absolute;
   overflow: hidden;
@@ -6,7 +13,7 @@ external-interface {
   width: 100%;
   height: 100%;
   border: none;
-  font-family: Ubuntu, sans-serif, "Trebuchet MS", "Lucida Grande",
+  font-family: Overlay, Ubuntu, sans-serif, "Trebuchet MS", "Lucida Grande",
   "Lucida Sans Unicode", "Lucida Sans", Tahoma;
   pointer-events: none;
 
